Refactored solution according to updated domain model